[EJBBOOK-39][EJBBOOK-42] Upgrade to JBossAS 6.0.0.Final; configure the build to quell warnings about unfixed plugin versions and platform-specific encoding during compilation

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
-<<<<<<< HEAD
 target
 bin
 .classpath
 .project
 .settings
-=======
-.classpath
-.project
-.settings/
-target/
->>>>>>> EJBBOOK-33
+ch08-messagedestinationlink/transaction.log
