--- a/ch07-rsscache/pom.xml
+++ b/ch07-rsscache/pom.xml
@@ -65,6 +65,13 @@
       <artifactId>jetty</artifactId>
       <version>6.1.16</version>
     </dependency>
+    
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.4</version>
+      <scope>provided</scope>
+    </dependency>
 
   </dependencies>
 
