--- a/ch19-timer/pom.xml
+++ b/ch19-timer/pom.xml
@@ -33,8 +33,9 @@
   <dependencies>
 
     <dependency>
-      <groupId>org.jboss.spec.javax.ejb</groupId>
-      <artifactId>jboss-ejb-api_3.1_spec</artifactId>
+      <groupId>org.jboss.as</groupId>
+      <artifactId>jboss-as-spec-api</artifactId>
+      <type>pom</type>
     </dependency>
 
     <!-- 
