[EJBBOOK-42] CH17 Tx Tests on AS7 now

--- a/ch04-firstejb/pom.xml
+++ b/ch04-firstejb/pom.xml
@@ -37,8 +37,8 @@
     </dependency>
     
     <dependency>
-      <groupId>org.jboss.arquillian</groupId>
-      <artifactId>arquillian-junit</artifactId>
+      <groupId>org.jboss.arquillian.junit</groupId>
+      <artifactId>arquillian-junit-container</artifactId>
     </dependency>
     
     <dependency>
