--- a/ch05-encryption/pom.xml
+++ b/ch05-encryption/pom.xml
@@ -48,6 +48,7 @@
     <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
+      <version>${version.commons.codec_commons.codec}</version>
     </dependency>
     
     <dependency>
@@ -56,8 +57,8 @@
     </dependency>
     
     <dependency>
-      <groupId>org.jboss.arquillian</groupId>
-      <artifactId>arquillian-junit</artifactId>
+      <groupId>org.jboss.arquillian.junit</groupId>
+      <artifactId>arquillian-junit-container</artifactId>
     </dependency>
     
     <dependency>
