--- a/ch15-secureschool/pom.xml
+++ b/ch15-secureschool/pom.xml
@@ -50,13 +50,14 @@
     </dependency>
     
     <dependency>
-      <groupId>org.jboss.arquillian</groupId>
-      <artifactId>arquillian-junit</artifactId>
+      <groupId>org.jboss.arquillian.junit</groupId>
+      <artifactId>arquillian-junit-container</artifactId>
     </dependency>
     
     <dependency>
       <groupId>org.apache.openejb</groupId>
       <artifactId>openejb-core</artifactId>
+      <scope>compile</scope> <!-- TODO: Hack until AS7-1559 is resolved -->
     </dependency>
     
     <dependency>
